# wm7tools-zig

./: .gitignore  Cargo.toml  README.md  build.bat  build.sh
common/: wmnk.h  wmpartitions.h
src/: guid.rs  lib.rs  mbr.rs  mmap.rs  wmnk.rs  wmpartitions.rs
wmnkextract/: build.sh  wmnkextract.c
wmpartinfo/: wmpartinfo.c
