[package]
name = "wm7tools"
version = "0.1.0"
edition = "2021"
authors = ["Emma", "Ben"]

[lib]
name = "wm7tools"
path = "src/lib.rs"

[[bin]]
name = "wmnkextract"
path = "src/bin/wmnkextract.rs"

[[bin]]
name = "wmpartinfo"
path = "src/bin/wmpartinfo.rs"

[dependencies]
# No external dependencies required! pure, standard Rust.

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

